# wattcoin

./: .env.example  BOUNTY_PROOF.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  MEMO_PARSER_README.md  PR_BODY.md  Procfile  RATE_LIMITING_COVERAGE.md  README.md  SOLUTION_88.md  WHITEPAPER.md  admin_blueprint.py  ai_provider.py  api_balance.py  api_bounties.py  api_error_codes.py  api_health.py  api_llm.py  api_nodes.py  api_pr_review.py  api_reputation.py  api_swarmsolve.py  api_task_marketplace.js  api_tasks.py  api_webhooks.py  api_wsi.py  bounty_auto_pay.py  bounty_evaluator.py  bridge.py  bridge_web.py  clawbot_runner.py  config_rates.py  content_security.py  daily_health_check.py  discord_bot_150.py  eval_replay.py  extensions.py  health_endpoint.py  install.sh  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py
contracts/wattcoin/: Cargo.toml
data/: contributor_reputation.json  pr_payouts.json
deployment/: budget_tracker.json  launch_communication.md
discord-bot/: .env.example  config.py
discord_bot/: README.md  bot.py  requirements.txt  test_bot.py
docs/: AI_VERIFICATION_SPEC.md  CHANGELOG_2026-02-05_First_Autonomous_Payments.md  CLAWBOT_TEMPLATE.md  CONTRIBUTING.md  SCRAPER_API.md  SWARMSOLVE_API.md  WATT_MEMO_PARSER.md  agent-integration-guide.md  ai-agent-integration.md  pi-energy-monitor.md  pi-inference-relay.md  pi-iot-bridge.md  pi-local-agent-node.md  pi-sensor-oracle.md  solana-token2022-report.md
integrations/: README.md
pi-energy-monitor/: INSTALL.md  api_client.py  config.py  config.yaml.example  hardware.py  logger.py  (+4 more)
(+233 files in other folders)
