[package]
name = "wattcoin"
version = "0.1.0"
description = "WattCoin SPL Token with Utility Features"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wattcoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

[dev-dependencies]
solana-program-test = "1.18.0"
tokio = "1.0"